--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -14,6 +14,7 @@ env:
   CI: true
   SKIP_KORGE_SAMPLES: true
   ANDROID_TESTS: true
+  DISPLAY: ":99"
 
 jobs:
   changes:
@@ -80,25 +81,31 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - { uses: actions/checkout@v3 }
+    - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev xvfb }
+    - { name: Run Xvfb in Background, run: "Xvfb :99 &" }
     - { name: Set up JDK 1.8, uses: actions/setup-java@v1, with: { java-version: 1.8 } }
-    - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev }
     - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
     - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
     - { name: Start gradle, run: ./gradlew }
-    - { name: Testing JVM, run: ./gradlew jvmTest }
+    - { name: Building classes, run: ./gradlew compileTestKotlinJvm }
+    - { name: Testing JVM, run: "./gradlew jvmTest" }
     - { name: Check sandbox compiles, run: "./gradlew :korge-sandbox:jvmJar" }
     - { name: Publish to maven local, run: ./gradlew publishJvmLocal }
-    - { name: e2e test, uses: GabrielBB/xvfb-action@v1, with: { working-directory: e2e-test, run: ./gradlew checkReferencesJvm --stacktrace } }
+    - { name: e2e test, working-directory: e2e-test, run: ./gradlew checkReferencesJvm --stacktrace }
+    #- { name: e2e test, uses: GabrielBB/xvfb-action@v1, with: { working-directory: e2e-test, run: ./gradlew checkReferencesJvm --stacktrace } }
 
   test-coverage:
     needs: changes
     if: ${{ needs.changes.outputs.testJvm == 'true' }}
     timeout-minutes: 120
     runs-on: ubuntu-latest
+    env:
+      DISABLE_HEADLESS_TEST: true
     steps:
       - { uses: actions/checkout@v3 }
+      - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev xvfb }
+      - { name: Run Xvfb in Background, run: "Xvfb :99 &" }
       - { name: Set up JDK 1.8, uses: actions/setup-java@v1, with: { java-version: 1.8 } }
-      - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev }
       - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
       - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
       - { name: Start gradle, run: ./gradlew }
@@ -107,6 +114,7 @@ jobs:
       #  with:
       #    name: coverage-results
       #    path: build/reports/kover/merged/html/
+      #- { name: Kover Merged XML Reports, uses: GabrielBB/xvfb-action@v1, with: { run: ./gradlew koverMergedXmlReport } }
       - { name: Kover Merged XML Reports, run: ./gradlew koverMergedXmlReport }
       - uses: codecov/codecov-action@v3
         with:
@@ -175,23 +183,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - { uses: actions/checkout@v3 }
+      - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev xvfb }
+      - { name: Run Xvfb in Background, run: "Xvfb :99 &" }
       - { name: Set up JDK 1.8, uses: actions/setup-java@v1, with: { java-version: 1.8 } }
-      - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev }
       - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
       - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
       - { name: Start gradle, run: ./gradlew }
-      - { name: Testing JVM on Linux, run: ./gradlew jvmTest }
+      #- { name: Testing JVM on Linux, uses: GabrielBB/xvfb-action@v1, with: { run: ./gradlew jvmTest } }
       - { name: Testing Kotlin/Native Linux, run: ./gradlew linuxX64Test }
       - { name: Publish gradle plugin, run: "./gradlew :korge-gradle-plugin:publishToMavenLocal" }
       - { name: Publish X64, run: ./gradlew publishLinuxX64PublicationToMavenLocal publishKotlinMultiplatformPublicationToMavenLocal }
       - { name: Stop gradle daemon, run: ./gradlew --stop }
-      - { name: e2e test, uses: GabrielBB/xvfb-action@v1, with: { working-directory: e2e-test, run: ./gradlew checkReferencesNative --stacktrace } }
+      - { name: e2e test native, working-directory: e2e-test, run: ./gradlew checkReferencesNative --stacktrace }
 
   test-native-macos:
     needs: changes
     if: ${{ needs.changes.outputs.testMacos == 'true' }}
     timeout-minutes: 120
     runs-on: macos-11
+    env:
+      DISABLE_HEADLESS_TEST: true
     steps:
       - { uses: actions/checkout@v3 }
       - { name: Set up JDK 1.8, uses: actions/setup-java@v1, with: { java-version: 1.8 } }
@@ -211,6 +222,7 @@ jobs:
     timeout-minutes: 120
     runs-on: windows-latest
     env:
+      DISABLE_HEADLESS_TEST: true
       DISABLE_JAVASCRIPT_TEST: true
       GRADLE_OPTS: -Dorg.gradle.daemon=false -Dkotlin.compiler.execution.strategy=in-process -Dorg.gradle.workers.max=3
     steps:
