--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -201,8 +201,8 @@ jobs:
     if: ${{ needs.changes.outputs.testMacos == 'true' }}
     timeout-minutes: 120
     runs-on: macos-11
-    env:
-      DISABLE_HEADLESS_TEST: true
+    #env:
+    #  DISABLE_HEADLESS_TEST: true
     steps:
       - { uses: actions/checkout@v3 }
       - { name: Set up JDK 1.8, uses: actions/setup-java@v1, with: { java-version: 1.8 } }
