--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -80,18 +80,19 @@ jobs:
     timeout-minutes: 120
     runs-on: ubuntu-latest
     steps:
-    - { uses: actions/checkout@v3 }
-    - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev xvfb }
-    - { name: Run Xvfb in Background, run: "Xvfb :99 &" }
-    - { name: Set up JDK 1.8, uses: actions/setup-java@v1, with: { java-version: 1.8 } }
-    - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
-    - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
-    - { name: Start gradle, run: ./gradlew }
-    - { name: Building classes, run: ./gradlew compileTestKotlinJvm }
-    - { name: Testing JVM, run: "./gradlew jvmTest", env: { EGL_LOG_LEVEL: debug, LIBGL_DEBUG: verbose, LIBGL_ALWAYS_SOFTWARE: true, MESA_DEBUG: true } }
-    - { name: Check sandbox compiles, run: "./gradlew :korge-sandbox:jvmJar" }
-    - { name: Publish to maven local, run: ./gradlew publishJvmLocal }
-    - { name: e2e test, working-directory: e2e-test, run: ./gradlew checkReferencesJvm --stacktrace }
+      - { uses: actions/checkout@v3 }
+      - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev xvfb }
+      - { name: Run Xvfb in Background, run: "Xvfb :99 &" }
+      - { name: Set up JDK 1.8, uses: actions/setup-java@v1, with: { java-version: 1.8 } }
+      - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
+      - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
+      - { name: Start gradle, run: ./gradlew }
+      - { name: Building classes, run: ./gradlew compileTestKotlinJvm }
+      - { name: Testing JVM, run: "./gradlew jvmTest", env: { EGL_LOG_LEVEL: debug, LIBGL_DEBUG: verbose, LIBGL_ALWAYS_SOFTWARE: true, MESA_DEBUG: true } }
+      - { name: Archive Test Results, if: failure(), uses: actions/upload-artifact@v1, with: { name: screenshot-test-results-linux, retention-days: 21, path: "**/build/reports", if-no-files-found: ignore } }
+      - { name: Check sandbox compiles, run: "./gradlew :korge-sandbox:jvmJar" }
+      - { name: Publish to maven local, run: ./gradlew publishJvmLocal }
+      - { name: e2e test, working-directory: e2e-test, run: ./gradlew checkReferencesJvm --stacktrace }
     #- { name: e2e test, uses: GabrielBB/xvfb-action@v1, with: { working-directory: e2e-test, run: ./gradlew checkReferencesJvm --stacktrace } }
 
   test-coverage:
@@ -210,6 +211,7 @@ jobs:
       - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
       - { name: Start gradle, run: ./gradlew }
       - { name: Testing JVM on MacosX64, run: ./gradlew jvmTest }
+      - { name: Archive Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: screenshot-test-results-macos, retention-days: 21, path: "**/build/reports",, if-no-files-found: ignore } }
       - { name: Testing Kotlin/Native MacosX64, run: ./gradlew macosX64Test }
       - { name: Publish gradle plugin, run: "./gradlew :korge-gradle-plugin:publishToMavenLocal" }
       - { name: Publish X64, run: ./gradlew publishMacosX64PublicationToMavenLocal publishKotlinMultiplatformPublicationToMavenLocal }
@@ -232,6 +234,7 @@ jobs:
       - { name: Set up JDK 1.8, uses: actions/setup-java@v1, with: { java-version: 1.8 } }
       - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
       - { name: Testing JVM on windows, shell: cmd, run: "CALL gradlew.bat jvmTest", env: { EGL_LOG_LEVEL: debug, LIBGL_DEBUG: verbose, LIBGL_ALWAYS_SOFTWARE: true, MESA_DEBUG: true } }
+      - { name: Archive Test Results, if: failure(), uses: actions/upload-artifact@v1, with: { name: screenshot-test-results-windows, retention-days: 21, path: "**/build/reports",, if-no-files-found: ignore } }
       - { name: Testing Kotlin/Native MingwX64Test, shell: cmd, run: CALL gradlew.bat mingwX64Test }
       - { name: Publish gradle plugin, shell: cmd, run: "CALL gradlew.bat :korge-gradle-plugin:publishToMavenLocal" }
       - { name: Publish X64, shell: cmd, run: CALL gradlew.bat publishMingwX64PublicationToMavenLocal publishKotlinMultiplatformPublicationToMavenLocal }
