--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -71,7 +71,7 @@ jobs:
         with:
           java-version: 1.8
       - run: ./gradlew checkReleasingMavenCentral
-      - run: ./gradlew |
+      - run: ./gradlew >-
           publishIosArm64PublicationToMavenRepository \
           publishIosX64PublicationToMavenRepository \
           publishIosSimulatorArm64PublicationToMavenRepository \
@@ -110,7 +110,7 @@ jobs:
           java-version: 1.8
       - run: sudo apt-get install xvfb
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon checkReleasingMavenCentral
-      - run: |
+      - run: >-
           xvfb-run --auto-servernum ./gradlew --no-daemon \
           publishJsPublicationToMavenRepository \
           publishAndroidPublicationToMavenRepository
