--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -71,16 +71,7 @@ jobs:
         with:
           java-version: 1.8
       - run: ./gradlew checkReleasingMavenCentral
-      - run: ./gradlew >-
-          publishIosArm64PublicationToMavenRepository \
-          publishIosX64PublicationToMavenRepository \
-          publishIosSimulatorArm64PublicationToMavenRepository \
-          publishWatchosX64PublicationToMavenRepository \
-          publishWatchosArm64PublicationToMavenRepository \
-          publishWatchosSimulatorArm64PublicationToMavenRepository \
-          publishTvosX64PublicationToMavenRepository \
-          publishTvosArm64PublicationToMavenRepository \
-          publishTvosSimulatorArm64PublicationToMavenRepository
+      - run: ./gradlew publishIosArm64PublicationToMavenRepository publishIosX64PublicationToMavenRepository publishIosSimulatorArm64PublicationToMavenRepository publishWatchosX64PublicationToMavenRepository publishWatchosArm64PublicationToMavenRepository publishWatchosSimulatorArm64PublicationToMavenRepository publishTvosX64PublicationToMavenRepository publishTvosArm64PublicationToMavenRepository publishTvosSimulatorArm64PublicationToMavenRepository
         env:
           DISABLE_JAVASCRIPT_TEST: true
   publish-jvm-multiplatform:
@@ -110,10 +101,7 @@ jobs:
           java-version: 1.8
       - run: sudo apt-get install xvfb
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon checkReleasingMavenCentral
-      - run: >-
-          xvfb-run --auto-servernum ./gradlew --no-daemon \
-          publishJsPublicationToMavenRepository \
-          publishAndroidPublicationToMavenRepository
+      - run: xvfb-run --auto-servernum ./gradlew --no-daemon publishJsPublicationToMavenRepository publishAndroidPublicationToMavenRepository
   publish-linux:
     runs-on: ubuntu-latest
     needs: [create-staging-repo]
