--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -174,6 +174,7 @@ jobs:
     - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
     - { name: Start gradle, run: ./gradlew }
     - { name: Run ios simulator tests, run: ./gradlew iosX64Test }
+    - { name: Archive Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: screenshot-test-results-ios, retention-days: 21, path: "**/build/reports", if-no-files-found: ignore } }
     - { name: Check compilation of iOS targets, run: ./gradlew publishIosX64PublicationToMavenLocal publishIosArm64PublicationToMavenLocal }
     - { name: Check compilation of watchOS targets, run: ./gradlew publishWatchosArm64PublicationToMavenLocal publishWatchosX64PublicationToMavenLocal }
     - { name: Check compilation of tvOS targets, run: ./gradlew publishTvosArm64PublicationToMavenLocal publishTvosX64PublicationToMavenLocal }
