--- a/e2e-test/buildSrc/build.gradle
+++ b/e2e-test/buildSrc/build.gradle
@@ -1,5 +1,7 @@
 plugins {
+    //id "org.gradle.kotlin.kotlin-dsl" version "4.0.6"
     id "org.gradle.kotlin.kotlin-dsl" version "2.3.3"
+
 }
 
 repositories {
@@ -10,4 +12,6 @@ repositories {
 
 dependencies {
     implementation("com.soywiz.korlibs.korim:korim-jvm:3.0.0")
+    //implementation("com.soywiz.korlibs.korim:korim-jvm:3.4.0")
+    //implementation("com.soywiz.korlibs.korim:korim-jvm:999.0.0.999")
 }
