--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -82,6 +82,8 @@ jobs:
       ENABLE_BENCHMARKS: true
     steps:
     - { uses: actions/checkout@v3 }
+    #- { name: Configure local.properties, run: "echo org.gradle.parallel=true >> local.properties && echo org.gradle.workers.max=2 >> local.properties" }
+    - { name: Configure local.properties, run: "echo org.gradle.parallel=true >> local.properties" }
     - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev xvfb }
     - { name: Run Xvfb in Background, run: "Xvfb :99 &" }
     - { name: Set up JDK 1.8, uses: actions/setup-java@v1, with: { java-version: 1.8 } }
@@ -238,6 +240,7 @@ jobs:
       GRADLE_OPTS: -Dorg.gradle.daemon=false -Dkotlin.compiler.execution.strategy=in-process -Dorg.gradle.workers.max=3
     steps:
     - { uses: actions/checkout@v3 }
+    - { name: Configure local.properties, run: "echo org.gradle.parallel=false >> local.properties" }
     - { name: Download, shell: cmd, run: "curl -L -o opengl32-x64.zip https://github.com/korlibs/mesa-dist-win/releases/download/21.2.3/opengl32-x64.zip" }
     - { name: unzip, shell: cmd, run: "unzip opengl32-x64.zip" }
     - { name: unzip to korge, shell: cmd, run: "unzip opengl32-x64.zip -d korge" }
