--- a/gradle.properties
+++ b/gradle.properties
@@ -71,3 +71,5 @@ kotlin.mpp.androidSourceSetLayoutVersion1.nowarn=true
 kotlin.incremental.useClasspathSnapshot=true
 
 #kotlin.build.report.output=file
+
+org.gradle.parallel=true
