--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -90,8 +90,8 @@ jobs:
     - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
     - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
     - { name: Start gradle, run: ./gradlew }
-    - { name: Building classes, run: ./gradlew compileTestKotlinJvm }
-    - { name: Testing JVM, run: "./gradlew jvmTest", env: { EGL_LOG_LEVEL: debug, LIBGL_DEBUG: verbose, LIBGL_ALWAYS_SOFTWARE: true, MESA_DEBUG: true } }
+    - { name: Building classes, run: ./gradlew --parallel compileTestKotlinJvm }
+    - { name: Testing JVM, run: "./gradlew --parallel jvmTest", env: { EGL_LOG_LEVEL: debug, LIBGL_DEBUG: verbose, LIBGL_ALWAYS_SOFTWARE: true, MESA_DEBUG: true } }
     - { name: Archive Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: screenshot-test-results-linux, retention-days: 21, path: "**/build/reports", if-no-files-found: ignore } }
     - { name: Check sandbox compiles, run: "./gradlew :korge-sandbox:jvmJar" }
     - { name: Publish to maven local, run: ./gradlew publishJvmLocal }
@@ -121,7 +121,7 @@ jobs:
       #    name: coverage-results
       #    path: build/reports/kover/merged/html/
       #- { name: Kover Merged XML Reports, uses: GabrielBB/xvfb-action@v1, with: { run: ./gradlew koverMergedXmlReport } }
-      - { name: Kover Merged XML Reports, run: ./gradlew koverMergedXmlReport }
+      - { name: Kover Merged XML Reports, run: ./gradlew --parallel koverMergedXmlReport }
       - uses: codecov/codecov-action@v3
         with:
           files: ./build/reports/kover/merged/xml/report.xml
