--- a/korau/build.gradle
+++ b/korau/build.gradle
@@ -5,4 +5,5 @@ com.soywiz.korlibs.NativeTools.configureAllCInterop(project, "stb_vorbis")
 
 dependencies {
     add("commonMainApi", project(":korio"))
+    add("commonMainApi", project(":korma"))
 }
