--- a/settings.gradle
+++ b/settings.gradle
@@ -31,5 +31,5 @@ include(":korge-reload-agent")
 include(":korge-sandbox")
 
 if (!inCI || System.getenv("ENABLE_BENCHMARKS") == "true") {
-    //include(":korge-benchmarks")
+    include(":korge-benchmarks")
 }
