--- a/gradle.properties
+++ b/gradle.properties
@@ -64,7 +64,7 @@ kotlin.mpp.androidSourceSetLayoutVersion1.nowarn=true
 
 #org.gradle.caching=true
 
-#org.gradle.unsafe.configuration-cache=true
+org.gradle.unsafe.configuration-cache=true
 #org.gradle.unsafe.configuration-cache-problems=warn
 
 # https://kotlinlang.org/docs/whatsnew17.html#a-new-approach-to-incremental-compilation
