--- a/gradle.properties
+++ b/gradle.properties
@@ -26,9 +26,6 @@ enableKotlinMobileWatchos=true
 # * We then could give gradle 1gb of memory or less, and the kotlin daemon 3gb or 4gb of RAM
 org.gradle.jvmargs=-Xmx2g -Dkotlin.daemon.jvm.options="-Xmx2g" -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
-org.gradle.daemon=true
-#org.gradle.configureondemand=true
-
 # -Dorg.gradle.debug=true --no-daemon
 # export GRADLE_OPTS="-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005 -Dorg.gradle.daemon=false -Dkotlin.compiler.execution.strategy=in-process"
 # ./gradlew jsTest
@@ -62,8 +59,9 @@ kotlin.native.ignoreDisabledTargets=true
 #kotlin.mpp.androidSourceSetLayoutVersion=2
 kotlin.mpp.androidSourceSetLayoutVersion1.nowarn=true
 
-#org.gradle.caching=true
-
+org.gradle.daemon=true
+org.gradle.caching=true
+#org.gradle.configureondemand=true
 org.gradle.unsafe.configuration-cache=true
 #org.gradle.unsafe.configuration-cache-problems=warn
 
