--- a/gradle.properties
+++ b/gradle.properties
@@ -62,7 +62,7 @@ kotlin.native.ignoreDisabledTargets=true
 #kotlin.mpp.androidSourceSetLayoutVersion=2
 kotlin.mpp.androidSourceSetLayoutVersion1.nowarn=true
 
-org.gradle.caching=true
+#org.gradle.caching=true
 
 org.gradle.unsafe.configuration-cache=true
 #org.gradle.unsafe.configuration-cache-problems=warn
