--- a/korge/build.gradle
+++ b/korge/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     jvmMainApi("com.fasterxml.jackson.core:jackson-databind:2.13.3")
     jvmMainApi("com.fasterxml.jackson.module:jackson-module-kotlin:2.14.2")
 
+    //commonTestApi(testFixtures(project(":korma")))
+
     //add("jvmMainApi", project(":korte"))
 
 	//add("commonTestApi", "it.krzeminski.vis-assert:vis-assert:0.4.0-beta")
