--- a/gradle/repositories.settings.gradle
+++ b/gradle/repositories.settings.gradle
@@ -5,6 +5,7 @@ y.repositories {
     mavenCentral()
     google()
     gradlePluginPortal()
+    maven { url = x.uri("https://maven.pkg.jetbrains.space/kotlin/p/kotlin/bootstrap") }
     maven { url = x.uri("https://maven.pkg.jetbrains.space/kotlin/p/kotlin/temporary") }
     maven { url = x.uri("https://maven.pkg.jetbrains.space/kotlin/p/kotlin/dev") }
     maven { url = x.uri("https://maven.pkg.jetbrains.space/public/p/kotlinx-coroutines/maven") }
