--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,8 +2,8 @@
 jna = "5.13.0"
 jcodec = "0.2.5"
 proguard-gradle = "7.2.2"
-kotlin = "1.8.20-RC2"
-#kotlin = "1.8.10"
+#kotlin = "1.8.20-RC2"
+kotlin = "1.8.10"
 #kotlin = "1.8.255-SNAPSHOT"
 kotlinx-coroutines = "1.7.0-Beta"
 #kotlinx-coroutines = "1.6.4"
