--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ kover = "0.6.1"
 kover-agent = "1.0.712"
 node = "16.9.1"
 android-build-gradle = "7.4.2"
+#android-build-gradle = "8.0.0"
 #android-build-gradle = "7.4.0-beta02"
 #android-build-gradle = "7.3.1"
 #android-build-gradle = "8.1.0-alpha04"
